update quinta entrega

--- a/University-API-Backend/appsettings.json
+++ b/University-API-Backend/appsettings.json
@@ -8,5 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UniversityDB": "Server=localhost\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigingKey": true,
+    "IssuserSingingKey": "",
+
+    "ValidateIssuser": true,
+    "ValidIssuser": "https://localhost:7157",
+
+    "ValidateAudiance": true,
+    "ValidAudience": "https://localhost:7157",
+
+    "RequiredExpirationTime": true,
+    "ValidateLifeTime": true
   }
 }
