update sexta entrega

--- a/University-API-Backend/appsettings.json
+++ b/University-API-Backend/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigingKey": true,
-    "IssuserSingingKey": "",
+    "IssuserSingingKey": "8c6f1f04-f373-4391-a3b9-98d2a06b42f3",
 
     "ValidateIssuser": true,
     "ValidIssuser": "https://localhost:7157",
