--- a/University_API_Backend/University_API_Backend.csproj
+++ b/University_API_Backend/University_API_Backend.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Entities\" />
+  </ItemGroup>
+
 </Project>
