--- a/University_API_Backend/appsettings.json
+++ b/University_API_Backend/appsettings.json
@@ -21,5 +21,23 @@
 
     "RequiredExpirationTime": true,
     "ValidateLifeTime": true
+  },
+  "Serilog": {
+    "MinimumLeve": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollinginterval": "Day"
+        }
+      }
+    ]
   }
 }
