--- a/University_API_Backend/appsettings.json
+++ b/University_API_Backend/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniversityDB": "Server=localhost\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;"
+    //Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;
+    "UniversityDB": "Server=localhost\\SQLEXPRESS;Database=UniversityDB;Trusted_Connection=True;Trust Server Certificate=true"
   },
   "JsonWebTokenKeys": {
     "ValidateIssuerSigingKey": true,
@@ -36,6 +37,20 @@
         "Args": {
           "path": "./logs/log-.txt",
           "rollinginterval": "Day"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "UniversityDB",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "schemaName": "EventLogging",
+            "autoCreateSqlTable": true,
+            "batchPostingLimit": 1000,
+            "period": "0.00:00:30"
+          },
+          "restrictedToMinimumLevel": "Warning"
         }
       }
     ]
